# openbb-ext-app

./: .gitignore  Procfile  main.py  pyproject.toml  requirements.txt
config/: settings.py
resources/extracted_ocr/: IndiaTaxAudit2025.json
src/: custom_azure_openai.py  custom_google_ai.py  utils.py
src/agents/: utils.py
src/agents/audit_agent/: prompt.py  route.py  service.py
src/agents/audit_agent_v2/: prompt.py  route.py  service.py
src/db/: es_client.py
src/db/bq/: bq_base_model.py  bq_client.py  bq_repo.py
src/middlewares/: auth_middleware.py
src/semantic/: model.py  service.py
src/widgets/chart_widget/: route.py  service.py
src/widgets/file_previewer/: model.py  route.py  service.py
src/widgets/tabular_widget/: model.py  route.py  service.py
