[project]
name = "openbb-ext-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "elasticsearch>=9.3.0",
    "elasticsearch-dsl==0.0.9",
    "google-genai>=1.70.0",
    "langchain-openai==1.1.10",
    "openai>=2.24.0",
]
